--- a/lore.html
+++ b/lore.html
@@ -340,7 +340,7 @@
                                             <span class="line-bg-right">Commissions through, Discord.</span>
                                         </p>
                                         <h2 class="section-title title-cap">Discord</h2>
-                                        <a target=”_blank” href="https://discord.gg/RFxCn4cWwa" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                        <a target=”_blank” href="https://discord.gg/msFcP65Ny8" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                             <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                         </a>
                                         <br>
