--- a/CommStatus.html
+++ b/CommStatus.html
@@ -203,7 +203,7 @@
           </div>
           <div class="nav-content">
             <p class="title-line">Contact</p>
-            <a href="https://discord.gg/RFxCn4cWwa">Discord</a>
+            <a href="https://discord.gg/msFcP65Ny8">Discord</a>
                             </div>
                         </div>
                         <div class="nav-social nav-content">
