--- a/TOS.html
+++ b/TOS.html
@@ -446,8 +446,8 @@
                 </div>
             </div>
 
-            <!-- ========== Contact Form Model ========== -->
-            <div class="contact-btn">
+             <!-- ========== Contact Form Model ========== -->
+             <div class="contact-btn">
                 <div class="contact-btn-txt">Want to commission me?</div>
             </div>
             <div class="contact-modal background-section">
@@ -465,8 +465,8 @@
                                         <p class="sub-heading line-shap line-shap-before mb-15">
                                             <span class="line-bg-right">Commissions through, Discord.</span>
                                         </p>
-                                        <h2 class="section-title title-cap">Discord</h2>
-                                        <a target=”_blank” href="https://discord.com/invite/msFcP65Ny8" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                        <h2 class="section-title title-cap">Pricing and discord link</h2>
+                                        <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                             <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                         </a>
                                         <br>
