--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                 Want to commission me.. click this button for it!
                             </p>
 
-                            <a data-dsn-title="End" href="https://discord.gg/msFcP65Ny8" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                            <a data-dsn-title="End" href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                 <span class="dsn-border border-color-reverse-color"></span> Commission <span>⟶</span>
                             </a>
 
@@ -514,8 +514,8 @@
                                         <p class="sub-heading line-shap line-shap-before mb-15">
                                             <span class="line-bg-right">Commissions through, Discord.</span>
                                         </p>
-                                        <h2 class="section-title title-cap">Discord</h2>
-                                        <a target=”_blank” href="https://discord.gg/msFcP65Ny8" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                        <h2 class="section-title title-cap">Pricing and discord link</h2>
+                                        <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                             <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                         </a>
                                         <br>
