--- a/allart.html
+++ b/allart.html
@@ -243,10 +243,10 @@
                         <div class="container d-flex text-center flex-column align-items-center mb-70">
                             <p class="sub-heading mb-15">
                                 <span class="icon">{</span>
-                                <span class="text"> Our Works</span>
+                                <span class="text"> My Work</span>
                                 <span class="icon">}</span>
                             </p>
-                            <h2 class="section-title">Creative Portfolio Designs</h2>
+                            <h2 class="section-title">All Artworks</h2>
                         </div>
 
                         <div class="container">
