--- a/oric.html
+++ b/oric.html
@@ -232,7 +232,7 @@
                         </div>
                         <div class="button-box d-flex justify-content-end align-items-center">
                             <div>
-                                <a href="contact.html" class="mt-30 effect-ajax dsn-button p-relative">
+                                <a href="TOS.html" class="mt-30 effect-ajax dsn-button p-relative">
                                     <span class="dsn-border-rdu "></span>Terms and Service
                                 </a>
                             </div>
