--- a/allart.html
+++ b/allart.html
@@ -243,7 +243,7 @@
                         <div class="container d-flex text-center flex-column align-items-center mb-70">
                             <p class="sub-heading mb-15">
                                 <span class="icon">{</span>
-                                <span class="text"> My Work</span>
+                                <span class="text"> If it doesn't load properly, select a tag or refresh the page</span>
                                 <span class="icon">}</span>
                             </p>
                             <h2 class="section-title">All Artworks</h2>
