--- a/allart.html
+++ b/allart.html
@@ -278,7 +278,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
-                                                    <img width="563.5" src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works">
+                                                    <img  src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -297,7 +297,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraChristmas.png" title="Gura" data-size="905x1280">
-                                                    <img width="563.5" src="assets/img/project/project1/GuraChristmas.png" srcset="assets/img/project/project1/GuraChristmas.png 1x, assets/img/project/project1/GuraChristmas.png" alt="Recent Works">
+                                                    <img  src="assets/img/project/project1/GuraChristmas.png" srcset="assets/img/project/project1/GuraChristmas.png 1x, assets/img/project/project1/GuraChristmas.png" alt="Recent Works">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -317,7 +317,7 @@
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Rushia" data-size="500x500">
-                                            <img width="529.5" src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
+                                            <img  src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -334,7 +334,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Clopez.png" title="Clopez" data-size="905x1280">
-                                                    <img width="563.5" src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission">
+                                                    <img  src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -352,7 +352,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" title="Cyanide" data-size="905x1280">
-                                                    <img width="517.3" src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" srcset="assets/img/project/project2/CyanideNewNoJacketTransparemt.png 2x, assets/img/project/project2/CyanideNewNoJacketTransparemt.png 4x" alt="Commissioned Piece">
+                                                    <img src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" srcset="assets/img/project/project2/CyanideNewNoJacketTransparemt.png 2x, assets/img/project/project2/CyanideNewNoJacketTransparemt.png 4x" alt="Commissioned Piece">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -372,7 +372,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili" data-size="500x500">
-                                                    <img width="664.5" src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission">
+                                                    <img  src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -388,7 +388,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/CnBD.png" title="Squili" data-size="500x500">
-                                                    <img width="563.3" src="assets/img/project/project3/CnBD.png" srcset="assets/img/project/project3/CnBD.png 4x, assets/img/project/project3CnBD.png 4x" alt="Commission">
+                                                    <img src="assets/img/project/project3/CnBD.png" srcset="assets/img/project/project3/CnBD.png 4x, assets/img/project/project3CnBD.png 4x" alt="Commission">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -404,7 +404,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNew Transparent.png" title="Cyanide" data-size="905x1280">
-                                                    <img width="517.3" height="500" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece">
+                                                    <img height="500" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -422,7 +422,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.png" title="Rymm" data-size="905x1280">
-                                                    <img width="663.5" src="assets/img/project/project2/owl jacket.png" srcset="assets/img/project/project2/owl jacket.png 2x, assets/img/project/project2/owl jacket.png 4x" alt="Commissioned Piece">
+                                                    <img src="assets/img/project/project2/owl jacket.png" srcset="assets/img/project/project2/owl jacket.png 2x, assets/img/project/project2/owl jacket.png 4x" alt="Commissioned Piece">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -440,7 +440,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl.png" title="Rymm" data-size="905x1280">
-                                                    <img width="663.5" src="assets/img/project/project2/owl.png" srcset="assets/img/project/project2/owl.png 2x, assets/img/project/project2/owl.png 4x" alt="Commissioned Piece">
+                                                    <img src="assets/img/project/project2/owl.png" srcset="assets/img/project/project2/owl.png 2x, assets/img/project/project2/owl.png 4x" alt="Commissioned Piece">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -458,7 +458,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
-                                                    <img width="" src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission">
+                                                    <img src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
