--- a/allart.html
+++ b/allart.html
@@ -369,7 +369,7 @@
                                        
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
-                                                <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili" data-size="500x500">
+                                                <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili!" data-size="500x500">
                                                     <img  src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission">
                                                 </a>
                                             </div>
