--- a/allart.html
+++ b/allart.html
@@ -26,6 +26,9 @@
             });
         });
     </script>
+     <script>window.setInterval(function(){
+        $(window).trigger('resize')
+     }, 1000);</script>
     
 
     <!-- script
