--- a/allart.html
+++ b/allart.html
@@ -514,15 +514,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <br>
                                 <div class="column occhara" data-aos="fade-up">
 
                                     <div class="folio-item">
                                         <div class="has-popup folio-item__thumb">
                                             <a class="folio-item__thumb-link" target=”blank”
-                                                href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
+                                                href="assets/img/project/project3/E.png" title="E" >
                                                 <img src="assets/img/project/project3/E.png"
-                                                    srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png"
+                                         
                                                     alt="Commission">
                                             </a>
                                         </div>
