--- a/allart.html
+++ b/allart.html
@@ -514,10 +514,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="column occhara" data-aos="fade-up">
+                                <div class="column occhara" >
 
                                     <div class="folio-item">
-                                        <div class="has-popup folio-item__thumb">
+                                        <div class=" folio-item__thumb">
                                             <a class="folio-item__thumb-link" target=”blank”
                                                 href="assets/img/project/project3/E.png" title="E" >
                                                 <img src="assets/img/project/project3/E.png"
