--- a/CommStatus.html
+++ b/CommStatus.html
@@ -208,7 +208,7 @@
                         </div>
                         <div class="nav-social nav-content">
                             <div class="nav-social-inner p-relative">
-                                <p class="title-line">Follow us</p>
+                                <p class="title-line"></p>
                                 <ul>
 
 
