--- a/oric.html
+++ b/oric.html
@@ -381,7 +381,13 @@
                         </div>
                     </section>
                     <!--========== End Bottom text Section ========== -->
-                    
+                    <center><h1>Artprint and Merch</h1>
+                    <a href="https://www.inprnt.com/gallery/kikii/" class="mt-30 dsn-button p-relative mr-20 dsn-load-animate">
+                        <span class="dsn-border-rdu border-color-theme-color"></span>Artprint Shop
+                    </a>
+                    <a href="https://shizu.creator-spring.com/" class="mt-30 dsn-button p-relative mr-20 dsn-load-animate">
+                        <span class="dsn-border-rdu border-color-theme-color"></span>Merch Shop
+                    </a></center>
                     <!--========== Pricing Section ==========--> 
                     <section class="services with-line with-number p-relative section-margin dsn-col"
                         data-dsn-title="Prices" data-dsn-animate="section">
