--- a/Fanart.html
+++ b/Fanart.html
@@ -332,7 +332,23 @@
                             </div>
 
                             <!-- end column -->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.png" title="Rushia" data-size="500x500">
+                                            <img width="529.5" src="assets/img/project/project1/hakozs.png" srcset="assets/img/project/project1/hakozs.png 4x, assets/img/project/project1/hakozs.png 4x" alt="Rushia">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <h4 class="folio-item__title">Hakoz!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1497909722334531584?s=20&t=D62vw5_mOP6JkZyomEomNg" title="Twitter" class="folio-item__project-link">Twitter</a>
 
+                                </div>
+                            </div>
+
+                            <!-- end column -->
                             <!-- folio-list -->
                         </div>
                     </section>
