--- a/Fanart.html
+++ b/Fanart.html
@@ -335,7 +335,7 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.png" title="Rushia" data-size="500x500">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.png" title="Bae" data-size="500x500">
                                             <img width="529.5" src="assets/img/project/project1/hakozs.png" srcset="assets/img/project/project1/hakozs.png 4x, assets/img/project/project1/hakozs.png 4x" alt="Rushia">
                                         </a>
                                     </div>
@@ -343,7 +343,7 @@
                                         <div class="folio-item__cat">illustration/FanArt</div>
                                         <h4 class="folio-item__title">Hakoz!</h4>
                                     </div>
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1497909722334531584?s=20&t=D62vw5_mOP6JkZyomEomNg" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1609531062266523649?s=20&t=-_FbAskUu-SOeeb-KIaalg" title="Twitter" class="folio-item__project-link">Twitter</a>
 
                                 </div>
                             </div>
