--- a/allart.html
+++ b/allart.html
@@ -250,7 +250,7 @@
                             <h2 class="section-title">All Artworks</h2>
                         </div>
 
-                        <div class="container">
+                        <div class="container" onload="this.classList.add('effect-ajax')">
                             <div class="filtering-t mb-50 ">
                                 <div
                                     class="filtering-wrap d-flex align-items-center text-center justify-content-center">
@@ -276,7 +276,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
-                                                    <img  src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works">
+                                                    <img  src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -295,7 +295,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraChristmas.png" title="Gura" data-size="905x1280">
-                                                    <img  src="assets/img/project/project1/GuraChristmas.png" srcset="assets/img/project/project1/GuraChristmas.png 1x, assets/img/project/project1/GuraChristmas.png" alt="Recent Works">
+                                                    <img  src="assets/img/project/project1/GuraChristmas.png" srcset="assets/img/project/project1/GuraChristmas.png 1x, assets/img/project/project1/GuraChristmas.png" alt="Recent Works" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -315,7 +315,7 @@
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Rushia" data-size="500x500">
-                                            <img  src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
+                                            <img  src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia" onload="this.classList.add('effect-ajax')">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -332,7 +332,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Clopez.png" title="Clopez" data-size="905x1280">
-                                                    <img  src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission">
+                                                    <img  src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -350,7 +350,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" title="Cyanide" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" srcset="assets/img/project/project2/CyanideNewNoJacketTransparemt.png 2x, assets/img/project/project2/CyanideNewNoJacketTransparemt.png 4x" alt="Commissioned Piece">
+                                                    <img src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" srcset="assets/img/project/project2/CyanideNewNoJacketTransparemt.png 2x, assets/img/project/project2/CyanideNewNoJacketTransparemt.png 4x" alt="Commissioned Piece" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -370,7 +370,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili!" data-size="500x500">
-                                                    <img  src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission">
+                                                    <img  src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -402,7 +402,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNew Transparent.png" title="Cyanide" data-size="905x1280">
-                                                    <img height="500" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece">
+                                                    <img height="500" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -420,7 +420,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.png" title="Rymm" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/owl jacket.png" srcset="assets/img/project/project2/owl jacket.png 2x, assets/img/project/project2/owl jacket.png 4x" alt="Commissioned Piece">
+                                                    <img src="assets/img/project/project2/owl jacket.png" srcset="assets/img/project/project2/owl jacket.png 2x, assets/img/project/project2/owl jacket.png 4x" alt="Commissioned Piece" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -438,7 +438,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl.png" title="Rymm" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/owl.png" srcset="assets/img/project/project2/owl.png 2x, assets/img/project/project2/owl.png 4x" alt="Commissioned Piece">
+                                                    <img src="assets/img/project/project2/owl.png" srcset="assets/img/project/project2/owl.png 2x, assets/img/project/project2/owl.png 4x" alt="Commissioned Piece" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -456,7 +456,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
-                                                    <img src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission">
+                                                    <img src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission" onload="this.classList.add('effect-ajax')">
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
