--- a/index.html
+++ b/index.html
@@ -31,6 +31,41 @@
             });
         });
     </script>
+<script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
+<script>
+  /* paste this line in verbatim */
+  window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments)};
+  /* customize formbutton below*/     
+  formbutton("create", {
+    action: "https://formspree.io/f/xqkoeenv",
+    title: "How can we help?",
+    fields: [
+      { 
+        type: "email", 
+        label: "Email:", 
+        name: "email",
+        required: true,
+        placeholder: "your@email.com"
+      },
+      {
+        type: "textarea",
+        label: "Message:",
+        name: "message",
+        placeholder: "What's on your mind?",
+      },
+      { type: "submit" }      
+    ],
+    styles: {
+      title: {
+        backgroundColor: "gray"
+      },
+      button: {
+        backgroundColor: "gray"
+      }
+    }
+  });
+</script>
+
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
 
@@ -336,7 +371,7 @@
                     <!-- ========== End Header Normal ========== -->
 
                     <!-- ========== Categories ========== -->
-                    <section class="work-section p-relative section-margin dsn-swiper over-hidden" data-dsn-title="Categories" data-dsn-option='{"slidesPerView":1.5,"spaceBetween":50}'>
+                    <section onload="this.classList.add('effect-ajax')" class="work-section p-relative section-margin dsn-swiper over-hidden" data-dsn-title="Categories" data-dsn-option='{"slidesPerView":1.5,"spaceBetween":50}'>
                         <div class="wrapper over-hidden">
                             <div class="work-inner work-hover work  d-flex dsn-load-animate" data-fx="1">
                                 <div class="work__item pt-80 pb-80 border-bottom">
@@ -394,7 +429,7 @@
                                 </div>
 
                                 <div class="work__item pt-80 pb-80 border-bottom">
-                                    <a href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
+                                    <a class="effect-ajax" href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
                                         <span class="metas mb-25"><span> Everything</span></span>
 
                                         <h2 class="work__item-text">
