--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
   window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments)};
   /* customize formbutton below*/     
   formbutton("create", {
-    action: "https://formspree.io/f/xqkoeenv",
-    title: "How can we help?",
+    action: "https://formspree.io/f/moqzjjbj",
+    title: "Commission",
     fields: [
       { 
-        type: "email", 
-        label: "Email:", 
-        name: "email",
+        type: "textarea", 
+        label: "Title", 
+        name: "message",
         required: true,
-        placeholder: "your@email.com"
+        placeholder: "Convey your Commission title"
       },
       {
         type: "textarea",
