--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet"
     /></noscript>
-    <script>
+    <script >
         $(document).ready(function() {
             $('.click').click(function() {
                 $('.nav__right').slideToggle("fast");
@@ -57,10 +57,10 @@
     ],
     styles: {
       title: {
-        backgroundColor: "gray"
+        backgroundColor: "#ffcfd1"
       },
       button: {
-        backgroundColor: "gray"
+        backgroundColor: "#ffcfd1"
       }
     }
   });
