--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               </div>
               <div class="nav-content">
                 <p class="title-line">Contact</p>
-                <a href="https://discord.gg/msFcP65Ny8">Discord</a>
+                <a href="#">Discord</a>
                                 </div>
                             </div>
                             <div class="nav-social nav-content">
