--- a/Fanart.html
+++ b/Fanart.html
@@ -207,7 +207,7 @@
           </div>
           <div class="nav-content">
             <p class="title-line">Contact</p>
-            <a href="#">Discord</a>
+            <a href="https://discord.gg/msFcP65Ny8">Discord</a>
                             </div>
                         </div>
                         <div class="nav-social nav-content">
