--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -208,7 +208,7 @@
           </div>
           <div class="nav-content">
             <p class="title-line">Contact</p>
-            <a href="https://discord.gg/msFcP65Ny8">Discord</a>
+            <a href="#">Discord</a>
                             </div>
                         </div>
                         <div class="nav-social nav-content">
