--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                             </a>
 
                             <p class="sm-p mt-15 theme-color">
-                                NOTE : First make sure to read the terms and service, <a href="index.html">TOS</a>
+                                NOTE : First make sure to read the terms and service, and chuuni iz cute<a href="index.html">TOS</a>
                             </p>
                         </div>
                     </div>
@@ -497,7 +497,7 @@
 
             <!-- ========== Contact Form Model ========== -->
             <div class="contact-btn">
-                <div class="contact-btn-txt">Want to commission me?</div>
+                <div class="contact-btn-txt">Want to commissions?</div>
             </div>
             <div class="contact-modal background-section">
                 <div class="contact-container h-100 w-100 border-right">
