--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                             </p>
 
                             <a data-dsn-title="End" href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
-                                <span class="dsn-border border-color-reverse-color"></span> Commission <span>⟶</span>
+                                <span class="dsn-border border-color-reverse-color"></span> Commissions <span>⟶</span>
                             </a>
 
                             <p class="sm-p mt-15 theme-color">
