--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                             </a>
 
                             <p class="sm-p mt-15 theme-color">
-                                NOTE : First make sure to read the terms and service, and chuuni iz cute<a href="index.html">TOS</a>
+                                NOTE : First make sure to read the terms and service,<a href="index.html">TOS</a>
                             </p>
                         </div>
                     </div>
