--- a/allart.html
+++ b/allart.html
@@ -535,7 +535,7 @@
                                         <span class="line-bg-right">Commissions through, Discord.</span>
                                     </p>
                                     <h2 class="section-title title-cap">Pricing and discord link</h2>
-                                    <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                    <a href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                         <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                     </a>
                                     <br>
