--- a/oric.html
+++ b/oric.html
@@ -252,7 +252,7 @@
                                 Commission status
                             </p>
                             <h2 class="section-title title-cap">Closed!</h2>
-                            <p style="font-size: 20px;">All slots are taken</p>
+                            <p style="font-size: 20px;">All slots are taken, please read the stuff below! and check out the TOS</p>
                         </div>
 
                        
