--- a/oric.html
+++ b/oric.html
@@ -251,7 +251,7 @@
                             <p class="sub-heading  line-bg-left mb-15">
                                 Commission status
                             </p>
-                            <h2 class="section-title title-cap">Closed!</h2>
+                            <h2 class="section-title title-cap">Closed! :neneAngry:</h2>
                             <p style="font-size: 20px;">All slots are taken, please read the stuff below! and check out the TOS</p>
                         </div>
 
