--- a/oric.html
+++ b/oric.html
@@ -251,7 +251,8 @@
                             <p class="sub-heading  line-bg-left mb-15">
                                 Commission status
                             </p>
-                            <h2 class="section-title title-cap">Closed!</h2>
+                            <h2 class="section-title title-cap">Closed! </h2>
+                            <img src="https://media.discordapp.net/attachments/932639937214414908/1076206702053040168/919072185883185202.png?width=86&height=86">
                             <p style="font-size: 10px;">All slots are taken, please read the stuff below! and check out the TOS</p>
                         </div>
 
