--- a/oric.html
+++ b/oric.html
@@ -333,7 +333,7 @@
                                         </div>
                                     </div>
                                 </div>
-<br><br>
+
                                 <div class="col-md-6 resume-box-inner">
                                     <div class="resume-box p-relative pr-30">
                                         <h3 class="title-block mb-30">Won't do</h3>
@@ -531,7 +531,7 @@
                             <h2 class="section-title">Note:</h2>
                             <center><p><strong>Full illustration</strong> includes detailed Character, Background and Story related things <br>
                            <strong>Character Sheet</strong> Includes Front view, Back view, side view and facial expressions, Simple Rendered/Celshading. Full Render will make change in the price.<br>
-                       For using commissioned piece as <strong>Commercial use</strong> price may vary on what the type of use, from 50% to 100% extra fees. Based on the base price of Commissioned piece<br><br>
+                       For using commissioned piece as <strong>Commercial use</strong> price may vary on what the type of use, from 50% to 100% extra fees based on the base price of Commissioned piece<br><br>
                      Complicated Artpiece/Character, Changing things on a piece, Background, Adding extra things, More than 1 character, Comercial use and lastly Character without proper reference <strong>will make change in the price</strong><br><br>
                     Price represents the general estimate price of the commission. Depending on the workload prices may be higher than the priced tag in commission sheet or site</p></center>
 
