--- a/allart.html
+++ b/allart.html
@@ -36,7 +36,16 @@
     </script>
     <script src="https://kit.fontawesome.com/d5d8a28e88.js" crossorigin="anonymous">
     </script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>\
+    <script> window.onload = function() {
+        // remove the AJAX loading animation
+  // only after all resources (including images) have finished loading
+  // to ensure images are fully loaded
+  // before the animation is removed
+  $(*#ajax-loader).fadeOut(1000); 
+  }
+  </script>
+  
 
 
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
