--- a/index.html
+++ b/index.html
@@ -428,11 +428,11 @@
                             </p>
 
                             <a data-dsn-title="End" href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
-                                <span class="dsn-border border-color-reverse-color"></span> Commissions <span>⟶</span>
+                                <span class="dsn-border border-color-reverse-color"></span> Commission <span>⟶</span>
                             </a>
 
                             <p class="sm-p mt-15 theme-color">
-                                NOTE : First make sure to read the terms and service,<a href="index.html">TOS</a>
+                                NOTE : First make sure to read the terms and service, <a href="index.html">TOS</a>
                             </p>
                         </div>
                     </div>
@@ -497,7 +497,7 @@
 
             <!-- ========== Contact Form Model ========== -->
             <div class="contact-btn">
-                <div class="contact-btn-txt">Want to commissions?</div>
+                <div class="contact-btn-txt">Want to commission me?</div>
             </div>
             <div class="contact-modal background-section">
                 <div class="contact-container h-100 w-100 border-right">
