--- a/allart.html
+++ b/allart.html
@@ -245,7 +245,7 @@
                             <h2 class="section-title">All Artworks</h2>
                         </div>
 
-                        <div class="container" onload="this.classList.add('effect-ajax')">
+                        <div class="container" >
                             <div class="filtering-t mb-50 ">
                                 <div
                                     class="filtering-wrap d-flex align-items-center text-center justify-content-center">
