--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                 </div>
 
                                 <div class="work__item pt-80 pb-80 border-bottom">
-                                    <a class="effect-ajax" href="personal.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
+                                    <a class="effect-ajax" href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
                                         <span class="metas mb-25"><span> Everything</span></span>
 
                                         <h2 class="work__item-text">
