--- a/allart.html
+++ b/allart.html
@@ -271,7 +271,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
-                                                    <img  src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works" onload="this.classList.add('effect-ajax')">
+                                                    <img  src="assets/img/project/project1/GuraTweetEdited.png"  alt="Recent Works" >
                                                 </a>
                                             </div>
                                             <div class="folio-item__info">
@@ -290,8 +290,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraChristmas.png" title="Gura" data-size="905x1280">
-                                                    <img  src="assets/img/project/project1/GuraChristmas.png" srcset="assets/img/project/project1/GuraChristmas.png 1x, assets/img/project/project1/GuraChristmas.png" alt="Recent Works" onload="this.classList.add('effect-ajax')">
-                                                </a>
+                                                    <img  src="assets/img/project/project1/GuraChristmas.png"></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">illustration/FanArt</div>
@@ -310,8 +309,7 @@
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Rushia" data-size="500x500">
-                                            <img  src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia" onload="this.classList.add('effect-ajax')">
-                                        </a>
+                                            <img  src="assets/img/project/project1/Rushia Completed.png" ></a>
                                     </div>
                                     <div class="folio-item__info">
                                         <div class="folio-item__cat">illustration/FanArt</div>
@@ -327,8 +325,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Clopez.png" title="Clopez" data-size="905x1280">
-                                                    <img  src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission" onload="this.classList.add('effect-ajax')">
-                                                </a>
+                                                    <img  src="assets/img/project/project3/Clopez.png" ></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">illustration/Commission</div>
@@ -345,8 +342,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" title="Cyanide" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" srcset="assets/img/project/project2/CyanideNewNoJacketTransparemt.png 2x, assets/img/project/project2/CyanideNewNoJacketTransparemt.png 4x" alt="Commissioned Piece" onload="this.classList.add('effect-ajax')">
-                                                </a>
+                                                    <img src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" ></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">OC Commission</div>
@@ -365,8 +361,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili!" data-size="500x500">
-                                                    <img  src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission" onload="this.classList.add('effect-ajax')">
-                                                </a>
+                                                    <img  src="assets/img/project/project3/Mia.png" ></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">illustration/Commission</div>
@@ -381,8 +376,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/CnBD.png" title="Squili" data-size="500x500">
-                                                    <img src="assets/img/project/project3/CnBD.png" srcset="assets/img/project/project3/CnBD.png 4x, assets/img/project/project3CnBD.png 4x" alt="Commission">
-                                                </a>
+                                                    <img src="assets/img/project/project3/CnBD.png" ></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">illustration/Commission</div>
@@ -397,8 +391,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNew Transparent.png" title="Cyanide" data-size="905x1280">
-                                                    <img height="500" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece" onload="this.classList.add('effect-ajax')">
-                                                </a>
+                                                    <img src="assets/img/project/project2/CyanideNew Transparent.png" ></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">OC Commission</div>
@@ -415,8 +408,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.png" title="Rymm" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/owl jacket.png" srcset="assets/img/project/project2/owl jacket.png 2x, assets/img/project/project2/owl jacket.png 4x" alt="Commissioned Piece" onload="this.classList.add('effect-ajax')">
-                                                </a>
+                                                    <img src="assets/img/project/project2/owl jacket.png" ></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">OC Commission</div>
@@ -433,8 +425,7 @@
                                         <div class="folio-item ">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl.png" title="Rymm" data-size="905x1280">
-                                                    <img src="assets/img/project/project2/owl.png" srcset="assets/img/project/project2/owl.png 2x, assets/img/project/project2/owl.png 4x" alt="Commissioned Piece" onload="this.classList.add('effect-ajax')">
-                                                </a>
+                                                    <img src="assets/img/project/project2/owl.png" ></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">OC Commission</div>
@@ -451,8 +442,7 @@
                                         <div class="folio-item">
                                             <div class="has-popup folio-item__thumb">
                                                 <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
-                                                    <img src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission" onload="this.classList.add('effect-ajax')">
-                                                </a>
+                                                    <img src="assets/img/project/project3/E.png" ></a>
                                             </div>
                                             <div class="folio-item__info">
                                                 <div class="folio-item__cat">illustration/Commission</div>
