--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
                                     </a>
                                 </div>
 
-                                <div class="work__item pt-80 pb-80 border-bottom">
-                                    <a class="effect-ajax" href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
+                                <div class="work__item pt-80 pb-80 border-bottom effect-ajax">
+                                    <a  href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
                                         <span class="metas mb-25"><span> Everything</span></span>
 
                                         <h2 class="work__item-text">
