--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                     </a>
                                 </div>
 
-                                <div class="work__item pt-80 pb-80 border-bottom effect-ajax">
+                                <div class="work__item pt-80 pb-80 border-bottom">
                                     <a  href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
                                         <span class="metas mb-25"><span> Everything</span></span>
 
