--- a/allart.html
+++ b/allart.html
@@ -36,7 +36,7 @@
     </script>
     <script src="https://kit.fontawesome.com/d5d8a28e88.js" crossorigin="anonymous">
     </script>
-    <script src="js/app.js"></script>\
+    <script src="js/app.js"></script>
     <script> function htmlLoaded() {
         // Some functions work only after window load 
     }
