--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                 </div>
 
                                 <div class="work__item pt-80 pb-80 border-bottom extend-container d-flex w-100 align-items-baseline justify-content-between align-items-end">
-                                    <a class="effect-ajax" href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
+                                    <a  href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png" class="effect-ajax">
                                         <span class="metas mb-25"><span> Everything</span></span>
 
                                         <h2 class="work__item-text">
