--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <!-- ========== End Header Normal ========== -->
 
                     <!-- ========== Categories ========== -->
-                    <section class="work-section p-relative section-margin dsn-swiper over-hidden" data-dsn-title="Categories" data-dsn-option='{"slidesPerView":1.5,"spaceBetween":50}'>
+                    <section class="work-section p-relative section-margin dsn-swiper over-hidden effect-ajax" data-dsn-title="Categories" data-dsn-option='{"slidesPerView":1.5,"spaceBetween":50}'>
                         <div class="wrapper over-hidden">
                             <div class="work-inner work-hover work  d-flex dsn-load-animate" data-fx="1">
                                 <div class="work__item pt-80 pb-80 border-bottom">
@@ -393,8 +393,8 @@
                                     </a>
                                 </div>
 
-                                <div class="work__item pt-80 pb-80 border-bottom extend-container d-flex w-100 align-items-baseline justify-content-between align-items-end">
-                                    <a  href="allart.html"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png" class="effect-ajax">
+                                <div class="work__item pt-80 pb-80 border-bottom ">
+                                    <a href="allart.html" class="effect-ajax"  data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
                                         <span class="metas mb-25"><span> Everything</span></span>
 
                                         <h2 class="work__item-text">
