--- a/allart.html
+++ b/allart.html
@@ -300,7 +300,7 @@
                                         </div>
                                     </div>
 
-                               <div class="column fanart" data-aos="fade-up">
+                               <div class="column fanart loli" data-aos="fade-up">
                                        
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
@@ -308,7 +308,7 @@
                                             <img  src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia" >
                                         </a>
                                     </div>
-                                    <div class="folio-item__info loli">
+                                    <div class="folio-item__info">
                                         <div class="folio-item__cat">illustration/FanArt</div>
                                         <h4 class="folio-item__title">Rushia!</h4>
                                     </div>
